# Hello_world

./: CMakeLists.txt  README.md  call.cpp  ctr.cpp  gcm.cpp  sm4.cpp
NEWNEWNEWNEWNEW_SM4_AVX2/: NEWNEWNEWNEWNEW_SM4_AVX2.sln  NEWNEWNEWNEWNEW_SM4_AVX2.vcxproj  NEWNEWNEWNEWNEW_SM4_AVX2.vcxproj.filters  ctr+.cpp  function.h  gcm+.cpp  sm4+.cpp  test.cpp
NEWNEWNEWNEWNEW_SM4_AVX2/Debug/: NEWNEWNEWNEWNEW_SM4_AVX2.exe.recipe  NEWNEWNEWNEWNEW_SM4_AVX2.ilk  NEWNEWNEWNEWNEW_SM4_AVX2.vcxproj.FileListAbsolute.txt  vc142.idb
NEWNEWNEWNEWNEW_SM4_AVX2/Debug/NEWNEWNE.9268a8e3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NEWNEWNEWNEWNEW_SM4_AVX2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NEWNEWNEWNEWNEW_SM4_AVX2/x64/Release/: NEWNEWNEWNEWNEW_SM4_AVX2.exe.recipe  NEWNEWNEWNEWNEW_SM4_AVX2.vcxproj.FileListAbsolute.txt
NEWNEWNEWNEWNEW_SM4_AVX2/x64/Release/NEWNEWNE.9268a8e3.tlog/: NEWNEWNEWNEWNEW_SM4_AVX2.lastbuildstate  icl.command.1.tlog  icl.read.1.tlog  icl.write.1.tlog  xilink-link-rc.read.1.tlog  xilink-link-rc.write.1.tlog  xilink.command.1.tlog  xilink.read.1.tlog  xilink.write.1.tlog
